ingress_host.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: localdev-host
  namespace: localdev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jenkins.localdev
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
  - host: gitea.localdev
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: 3000
  - host: registry.localdev
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-registry
          servicePort: 5000
  - host: charts.localdev
    http:
      paths:
      - path: /
        backend:
          serviceName: chartmuseum-chartmuseum
          servicePort: 8080
